force-app/main/default/objects/PRISM_DefectFinding__c/PRISM_DefectFinding__c.object-meta.xml
<CustomObject>
    <description>A defect or finding recorded during an Inspection. Drives work order creation and wildfire risk scoring.</description>
    <label>Defect Finding</label>
    <nameField>
        <label>Defect ID</label>
        <type>AutoNumber</type>
        <displayFormat>DEF-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Defect Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>