force-app/main/default/objects/PRISM_DefectFinding__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <label>Inspection</label>
    <type>MasterDetail</type>
    <referenceTo>PRISM_Inspection__c</referenceTo>
    <relationshipLabel>Defect Findings</relationshipLabel>
    <relationshipName>DefectFindings</relationshipName>
    
</CustomField>