force-app/main/default/objects/PRISM_DefectFinding__c/fields/WildfireRiskScore__c.field-meta.xml
<CustomField>
    <fullName>WildfireRiskScore__c</fullName>
    <label>Wildfire Risk Score</label>
    <type>Lookup</type>
    <referenceTo>PRISM_WildfireRiskScore__c</referenceTo>
    <relationshipLabel>Defect Findings</relationshipLabel>
    <relationshipName>DefectFindings</relationshipName>
</CustomField>