force-app/main/default/objects/PRISM_DefectFinding__c/fields/WorkOrderCreated__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderCreated__c</fullName>
    <label>Work Order Created</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>